# trajectory_tracking_rl

./: CMakeLists.txt  package.xml  readme.md  requirements.txt
config/: env_config.yaml  obstacle_1.yaml
scripts/: compile_result.py  create_rviz_world.py  main.py  sin.py  test_env.py  test_function.py  test_twin_agent.py
test/: test_env.py  test_obs.py  test_rl.py  test_torch_layer.py
trajectory_tracking_rl/: pytorch_model.py
trajectory_tracking_rl/agent/: DDPG.py  IDEA1.py  IDEA2.py  IDEA3.py  IDEA4.py  RCRL.py  SAAC.py  SAC.py  SEditor.py  SoftQ.py  TD3.py  USL.py
trajectory_tracking_rl/environment/: BaseGazeboUAVTrajectoryTracking.py  BaseGazeboUAVVel3DTrajectoryTracking.py  BaseGazeboUAVVelEnv.py  BaseGazeboUAVVelObsEnv.py  BaseGazeboUAVVelObsEnvPCD.py  BaseGazeboUAVVelObsEnvR2.py  BaseGazeboUAVVelObsEnvSimp.py  BaseGazeboUAVVelObsTrajectoryTracking.py  BaseGazeboUAVVelTrajectoryTracking.py
trajectory_tracking_rl/environment/utils/: CltSrvClasses.py  PubSubClasses.py
trajectory_tracking_rl/teacher/: TeacherController.py
trajectory_tracking_rl/teacher/Methods/: AlpGMM.py  OracleTeacher.py  RandomTeacher.py
